EXTRA_DIST =			\
	build-rules-msvc.mak	\
	config-msvc.mak		\
	configpy.py		\
	create-lists-msvc.mak	\
	create-lists.bat	\
	detectenv-msvc.mak	\
	generate-msvc.mak	\
	info-msvc.mak		\
	install.mak		\
	Makefile.vc		\
	pc_base.py		\
	pygobject-version.mak	\
	pygobjectpc.py		\
	pythonconfig.mak	\
	README.txt		\
	replace.py
